# advent-of-code

./: .coveragerc  .gitignore  README.md  pyproject.toml
adventofcode2024/: __init__.py  __main__.py  utility.py
adventofcode2024/day1/part1/: solution.py
adventofcode2024/day1/part1/test/: input.csv  test_solution.py
adventofcode2024/day1/part2/: solution.py
adventofcode2024/day1/part2/test/: test_solution.py
adventofcode2024/day2/part1/: input.csv  solution.py
adventofcode2024/day2/part1/test/: test_solution.py
adventofcode2024/test/: test_utility.py
day-1/: day_1_solution.py
day-1/part-1/: input.csv  solution.py
day1/part1/: solution.py
day1/part1/test/: test_solution.py
year2024/: __main__.py  constant.py  utility.py
year2024/day01/: solution.py
year2024/day01/resource/: input.csv
year2024/day01/test/: test_solution.py
year2024/day02/: solution.py
year2024/day02/test/: test_solution.py
year2024/day03/: solution.py
year2024/day03/test/: test_solution.py
year2024/day04/: solution.py
year2024/day04/test/: test_solution.py
year2024/day05/: solution.py
year2024/day05/test/: test_solution.py
year2024/day06/: solution.py
year2024/day06/test/: test_solution.py
year2024/day07/: solution.py
year2024/day07/test/: test_solution.py
year2024/day08/: solution.py
year2024/day08/test/: test_solution.py
year2024/test/: test_utility.py
year2024/test/resource/: input.csv  test_get_column_labels_variable.csv
year2025/: day01.py  input.csv  utils.py
year2025/day01/resource/: input.csv
year2025/test/: test_day01.py
